# MyProjects

./: .gitignore  README.md  main.py  pyproject.toml
Animation/: NN.py  Simulation.py  Space.py  actions  model.pt
TRM/: TRM.txt  TRM_preprocessing.py
Workout/: Workout.py  Workout_Image_Processing.py  workout_data.csv
animation_PPO/: NN.py  Simulation.py  Space.py  actions
animation_PPO/models/: first.pt  first_actor.pt  first_critic.pt  second_actor.pt  second_critic.pt  target_seeker_first.pt  target_seeker_second.pt  target_seeker_third.pt  target_seeker_third_actor.pt  third_actor.pt  third_critic.pt
animation_dqn/: NN.py  Simulation.py  config.yaml
animation_dqn/models/: actions  first.pt  second.pt  third.pt
