[project]
name = "animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "glom>=24.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "pymunk>=7.1.0",
    "torch>=2.8.0",
    "torchrl>=0.9.2",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]
